[package]
name = "block_stm"
version = "0.1.0"
edition = "2021"
authors = ["Hemengjie <njtech_hemengjie@qq.com>"]
description = "An implement of Block-STM"
license = "Apache-2.0"
rust-version = "1.59.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.4.0", features = ["rayon"] }
num_cpus = "1.13.1"
once_cell = "1.15.0"
rayon = "1.5.3"
thiserror = "1.0.37"
tracing = "0.1.36"
rand = "0.8.5"
crossbeam = "0.8.2"
arc-swap = "1.5.1"
anyhow = "1.0.65"
aptos_e2e_tests = { package = "language-e2e-tests", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_vm = { package = "aptos-vm", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_types = { package = "aptos-types", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_move_deps = { package = "move-deps", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_state_view = { package = "aptos-state-view", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_aggregator = { package = "aptos-aggregator", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_bitvec = { package = "aptos-bitvec", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_crypto = { package = "aptos-crypto", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
aptos_parallel_executor = { package = "aptos-parallel-executor", git = "https://github.com/Fomalhauthmj/aptos-core", rev = "75552c754b", optional = true }
proptest = "1.0.0"
either = "1.8.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
pprof = { git = "https://github.com/tikv/pprof-rs", features = [
    "flamegraph",
    "criterion",
] }
serde_json = "1.0.86"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"

[[bench]]
name = "aptos"
harness = false
required-features = ["aptos_transfer"]

[[bench]]
name = "simulated"
harness = false
required-features = ["simulated_transfer", "benchmark"]

[features]
aptos_pkgs = [
    "aptos_e2e_tests",
    "aptos_vm",
    "aptos_types",
    "aptos_move_deps",
    "aptos_state_view",
    "aptos_aggregator",
    "aptos_bitvec",
    "aptos_crypto",
    "aptos_parallel_executor",
]
aptos_transfer = ["aptos_pkgs", "tracing"]
simulated_transfer = ["aptos_pkgs", "tracing"]
benchmark = []
tracing = []
