[package]
name = "block_stm"
version = "0.1.0"
edition = "2021"
authors = ["Hemengjie <njtech_hemengjie@qq.com>"]
description = "An implement of Block-STM"
license = "Apache-2.0"
rust-version = "1.59.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.4.0", features = ["rayon"] }
num_cpus = "1.13.1"
once_cell = "1.15.0"
rayon = "1.5.3"
thiserror = "1.0.37"
tracing = "0.1.36"
rand = "0.8.5"
crossbeam = "0.8.2"
arc-swap = "1.5.1"
anyhow = "1.0.65"
aptos_e2e_tests = { package = "language-e2e-tests", path = "../aptos-core/aptos-move/e2e-tests", optional = true }
aptos_vm = { package = "aptos-vm", path = "../aptos-core/aptos-move/aptos-vm", optional = true }
aptos_types = { package = "aptos-types", path = "../aptos-core/types", optional = true }
aptos_move_deps = { package = "move-deps", path = "../aptos-core/aptos-move/move-deps", optional = true }
aptos_state_view = { package = "aptos-state-view", path = "../aptos-core/storage/state-view", optional = true }
aptos_aggregator = { package = "aptos-aggregator", path = "../aptos-core/aptos-move/aptos-aggregator", optional = true }
aptos_bitvec = { package = "aptos-bitvec", path = "../aptos-core/crates/aptos-bitvec", optional = true }
aptos_crypto = { package = "aptos-crypto", path = "../aptos-core/crates/aptos-crypto", optional = true }
aptos_parallel_executor = { package = "aptos-parallel-executor", path = "../aptos-core/aptos-move/parallel-executor", optional = true }
proptest = "1.0.0"
either = "1.8.0"
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
serde_json = "1.0.86"

[[test]]
name = "correctness"
required-features = ["simulated_transfer"]

[[bench]]
name = "aptos"
harness = false
required-features = ["aptos_transfer", "bench_info"]

[[example]]
name = "my_single_txn"
required-features = ["traced_aptos_transfer","trace_single_txn"]

[[example]]
name = "aptos_se_single_txn"
required-features = ["traced_aptos_transfer"]

[[example]]
name = "aptos_pe_single_txn"
required-features = ["traced_aptos_transfer"]


[features]
# used to enable tracing in each aptos txn execution
trace_single_txn = []
# used to enable log custom benchmark infos
bench_info = []
# aptos relevant pkgs
aptos_pkgs = [
    "aptos_e2e_tests",
    "aptos_types",
    "aptos_move_deps",
    "aptos_state_view",
    "aptos_aggregator",
    "aptos_bitvec",
    "aptos_crypto",
    "aptos_parallel_executor",
]
# trace each txn execution
traced_aptos_vm = ["aptos_vm/external_tracing"]
# smart contract transfer txn,mainly used to benchmark
traced_aptos_transfer = ["aptos_pkgs", "traced_aptos_vm"]
# smart contract transfer txn,mainly used to benchmark
aptos_transfer = ["aptos_pkgs", "aptos_vm"]
# simulated transfer txn,mainly used to verify correctness
simulated_transfer = []
