[workspace]
default-members = ["block-stm"]
members = ["benchmark", "block-stm", "test-utils"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hemengjie <njtech_hemengjie@qq.com>"]
description = "An implement of Block-STM"
license = "Apache-2.0"
rust-version = "1.59.0"

[workspace.dependencies]

block-stm = { path = "block-stm" }
test-utils = { path = "test-utils" }

dashmap = { version = "5.4.0", features = ["rayon"] }
num_cpus = "1.13.1"
once_cell = "1.15.0"
rayon = "1.5.2"
thiserror = "1.0.37"
tracing = "0.1.36"
rand = "0.7.3"
crossbeam = "0.8.2"
arc-swap = "1.5.1"
anyhow = "1.0.65"

[profile.perf]
inherits = "release"
debug = 1
