[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-utils = { workspace = true, features = ["aptos"] }
tracing = { workspace = true }

[dev-dependencies]
num_cpus = { workspace = true }
criterion = "0.4.0"
clap = { version = "4.1.6", features = ["derive"] }

[features]
tracing = ["test-utils/tracing"]

[[bench]]
name = "aptos"
harness = false

[[example]]
name = "mpe"

[[example]]
name = "ape"

[[example]]
name = "ase"
