[package]
name = "block-stm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }
arc-swap = { workspace = true }

[features]
tracing = []
